# rust-diesel

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2021-09-24-183219_create_users/: up.sql
migrations/2021-09-24-183319_create_posts/: up.sql
src/: main.rs  models.rs  schema.rs
