[package]
name = "rust-diesel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.15.0"